# Pulse-CASTGNY-Hackathon

./: CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: prompts.py  runner.py  tools.py
backend/app/models/: __init__.py  metrics.py  report.py  request.py
backend/app/pipeline/: brand_discovery.py  content_gen.py  metrics.py  multi_source.py  parser.py  query_generator.py
backend/app/routers/: analysis.py
backend/app/services/: anthropic_client.py  tavily_client.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActionPlan.tsx  BrandInputForm.tsx  CompetitorTable.tsx  ContentArtifacts.tsx  EvidencePanel.tsx  ProgressStream.tsx  ScoreGauge.tsx  SentimentChart.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/lib/: types.ts
judges/: judges.md
mentors/: mentors.md
tips/: 01-share-of-model.md  02-mention-position.md  03-competitor-share-of-voice.md  04-sentiment-analysis.md  05-citation-presence.md  06-structured-data.md  07-entity-description.md  08-faq-content.md  09-comparison-pages.md  10-backlinks-authority.md  11-wikipedia-wikidata.md  12-press-reviews.md  13-crawlable-content.md  14-freshness.md  15-keyword-intent-alignment.md  16-answer-ready-snippets.md  tips.md
